// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatientHeader should display all details of the patient 1`] = `
<div>
  <div
    class="bx--tile patient-header"
  >
    <div
      class="bx--grid"
    >
      <div
        class="patient-image-and-details bx--row"
      >
        <div
          class="patient-image"
        />
        <div
          class="bx--col"
        >
          <div
            class="header-title-row bx--row"
          >
            <div
              class="patient-name-and-navigations"
            >
              <h1
                class="patient-name"
              >
                John Doe
              </h1>
              <a
                class="bx--link"
              >
                Patient Dashboard
              </a>
              <a
                class="bx--link"
              >
                Visit Summaries
              </a>
            </div>
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Open and close list of options"
              class="patient-movement-overflow bx--overflow-menu bx--overflow-menu--md"
              data-testid="overflow-menu"
              type="button"
            >
              <svg
                aria-label="Open and close list of options"
                class="bx--overflow-menu__icon"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="16"
                  cy="8"
                  r="2"
                />
                <circle
                  cx="16"
                  cy="16"
                  r="2"
                />
                <circle
                  cx="16"
                  cy="24"
                  r="2"
                />
                <title>
                  Open and close list of options
                </title>
              </svg>
            </button>
          </div>
          <div
            class="bx--row"
          >
            <a
              class="bx--link show-more bx--link--sm"
              kind="tertiary"
            >
              Hide Details
               
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="20"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 10L26 20 24.6 21.4 16 12.8 7.4 21.4 6 20z"
                />
              </svg>
               
            </a>
            <div
              class="other-info"
            >
              <div
                class="patient-basic-info"
              >
                <h3
                  class="patient-info"
                >
                  Male
                </h3>
                <h3
                  class="patient-info"
                >
                  30
                   
                  Years
                </h3>
                <h3
                  class="patient-info"
                >
                  01 Jan 1991
                </h3>
                <h3
                  class="patient-info"
                >
                  12345
                </h3>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bx--tile patient-details"
    >
      <div
        class="bx--row"
      >
        <div
          class="bx--col"
        >
          <div
            class="bx--tile details-tile"
          >
            <span
              class="details-headers"
            >
              Address
            </span>
            <span
              class="details-value"
            >
              Country
               : 
              Ethiopia
            </span>
            <span
              class="details-value"
            >
              Region
               : 
              Region test
            </span>
            <span
              class="details-value"
            >
              Zone
               : 
              zone test
            </span>
            <span
              class="details-value"
            >
              Woreda
               : 
              W
            </span>
            <span
              class="details-value"
            >
              Kebele
               : 
              Kebele
            </span>
            <span
              class="details-value"
            >
              Address
               : 
              13-899
            </span>
          </div>
        </div>
        <div
          class="bx--col"
        >
          <div
            class="bx--tile details-tile"
          >
            <span
              class="details-headers"
            >
              Contact Details
            </span>
            <span
              class="details-value"
            >
              Residence Phone
               : 
              22222222
            </span>
            <span
              class="details-value"
            >
              Mobile Phone
               : 
              999999999
            </span>
            <span
              class="details-value"
            >
              Work Phone
               : 
              34567890
            </span>
            <span
              class="details-value"
            >
              Other Phone
               : 
              99999999
            </span>
            <span
              class="details-value"
            >
              Email
               : 
              samuel email
            </span>
          </div>
        </div>
        <div
          class="bx--col"
        >
          <div
            class="bx--tile details-tile"
          >
            <span
              class="details-headers"
            >
              Relationships
            </span>
            <span
              class="details-value"
            >
              Father
               : 
              Test Father
            </span>
            <span
              class="details-value"
            >
              Mother
               : 
              Mother Test
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</div>
`;

exports[`PatientHeader should display patient movement item on click of overflow menu icon 1`] = `
<div>
  <div
    class="bx--tile patient-header"
  >
    <div
      class="bx--grid"
    >
      <div
        class="patient-image-and-details bx--row"
      >
        <div
          class="patient-image"
        />
        <div
          class="bx--col"
        >
          <div
            class="header-title-row bx--row"
          >
            <div
              class="patient-name-and-navigations"
            >
              <h1
                class="patient-name"
              >
                John Doe
              </h1>
              <a
                class="bx--link"
              >
                Patient Dashboard
              </a>
              <a
                class="bx--link"
              >
                Visit Summaries
              </a>
            </div>
            <button
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="Open and close list of options"
              class="patient-movement-overflow bx--overflow-menu bx--overflow-menu--open bx--overflow-menu--md"
              data-testid="overflow-menu"
              type="button"
            >
              <svg
                aria-label="Open and close list of options"
                class="bx--overflow-menu__icon"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="16"
                  cy="8"
                  r="2"
                />
                <circle
                  cx="16"
                  cy="16"
                  r="2"
                />
                <circle
                  cx="16"
                  cy="24"
                  r="2"
                />
                <title>
                  Open and close list of options
                </title>
              </svg>
            </button>
          </div>
          <div
            class="bx--row"
          >
            <a
              class="bx--link show-more bx--link--sm"
              kind="tertiary"
            >
              Show Details
               
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="20"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 22L6 12 7.4 10.6 16 19.2 24.6 10.6 26 12z"
                />
              </svg>
            </a>
            <div
              class="other-info"
            >
              <div
                class="patient-basic-info"
              >
                <h3
                  class="patient-info"
                >
                  Male
                </h3>
                <h3
                  class="patient-info"
                >
                  30
                   
                  Years
                </h3>
                <h3
                  class="patient-info"
                >
                  01 Jan 1991
                </h3>
                <h3
                  class="patient-info"
                >
                  12345
                </h3>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</div>
`;

exports[`PatientHeader should display patient movement overflow menu item as disabled 1`] = `
<div>
  <div
    class="bx--tile patient-header"
  >
    <div
      class="bx--grid"
    >
      <div
        class="patient-image-and-details bx--row"
      >
        <div
          class="patient-image"
        />
        <div
          class="bx--col"
        >
          <div
            class="header-title-row bx--row"
          >
            <div
              class="patient-name-and-navigations"
            >
              <h1
                class="patient-name"
              >
                John Doe
              </h1>
              <a
                class="bx--link"
              >
                Patient Dashboard
              </a>
              <a
                class="bx--link"
              >
                Visit Summaries
              </a>
            </div>
            <button
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="Open and close list of options"
              class="patient-movement-overflow bx--overflow-menu bx--overflow-menu--open bx--overflow-menu--md"
              data-testid="overflow-menu"
              type="button"
            >
              <svg
                aria-label="Open and close list of options"
                class="bx--overflow-menu__icon"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="16"
                  cy="8"
                  r="2"
                />
                <circle
                  cx="16"
                  cy="16"
                  r="2"
                />
                <circle
                  cx="16"
                  cy="24"
                  r="2"
                />
                <title>
                  Open and close list of options
                </title>
              </svg>
            </button>
          </div>
          <div
            class="bx--row"
          >
            <a
              class="bx--link show-more bx--link--sm"
              kind="tertiary"
            >
              Show Details
               
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="20"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 22L6 12 7.4 10.6 16 19.2 24.6 10.6 26 12z"
                />
              </svg>
            </a>
            <div
              class="other-info"
            >
              <div
                class="patient-basic-info"
              >
                <h3
                  class="patient-info"
                >
                  Male
                </h3>
                <h3
                  class="patient-info"
                >
                  30
                   
                  Years
                </h3>
                <h3
                  class="patient-info"
                >
                  01 Jan 1991
                </h3>
                <h3
                  class="patient-info"
                >
                  12345
                </h3>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</div>
`;
